--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   width: 75%;
   text-align: center;
   margin: 2em auto;
+  min-height: 50px;
   padding: 1em;
 }
 
@@ -17,7 +18,7 @@ body {
 
 .current-user {
   position: absolute;
-  top: -1em;
+  top: 0;
   left: 0;
 }
 
